<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_blue_green_pencil">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imgv_animation_pencil"
                android:layout_width="231dp"
                android:layout_height="189dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/pencil_00" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgv_animation_pencil">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <TextView
                        android:id="@+id/tv_reg_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_user"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_username"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/tv_reg_Fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/first_name"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_Fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_user"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_Fname"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/tv_reg_Lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/last_name"
                        android:textColor="@color/black"

                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_Lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_user"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_username"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/tv_reg_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"

                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_unlock"
                        android:drawableLeft="@drawable/ic_unlock"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPersonName|textPassword" />

                    <TextView
                        android:id="@+id/tv_reg_conf_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_conf_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_unlock"
                        android:drawableLeft="@drawable/ic_unlock"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_conf_password"
                        android:inputType="textPersonName|textPassword" />

                    <TextView
                        android:id="@+id/tv_reg_email_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/email_address"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_email_addresss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_email_address"
                        android:inputType="textPostalAddress" />

                    <TextView
                        android:id="@+id/tv_reg_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/phone_num"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_telephone"
                        android:drawableLeft="@drawable/ic_telephone"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_phone"
                        android:inputType="textPostalAddress" />
                    <TextView
                        android:id="@+id/tv_reg_passport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/passport"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_passport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/passport"
                        android:drawableLeft="@drawable/passport"
                        android:drawablePadding="10dp"
                        android:ems="12"
                        android:hint="@string/enter_your_passport"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/tv_reg_DOB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/dateofbirth"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_reg_DOB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawablePadding="10dp"
                        android:editable="false"
                        android:ems="12"
                        android:hint="@string/select_your_DOB"
                        android:onClick="showDatePicker" />

                    <TextView
                        android:id="@+id/tv_reg_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Gender:"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                    <RadioGroup
                        android:id="@+id/rg_reg_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <RadioButton
                            android:id="@+id/rb_reg_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/boy"
                            android:text="Male"
                            android:onClick="onRadioButtonClicked"
                            android:textStyle="bold"
                            />

                        <RadioButton
                            android:id="@+id/rb_reg_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/girl"
                            android:text="Female"
                            android:onClick="onRadioButtonClicked"
                            android:textStyle="bold" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/custom_btn"
                        android:fontFamily="@font/roboto_medium"
                        android:foregroundGravity="center_horizontal"
                        android:onClick="register"
                        android:text="@string/register"
                        android:textSize="20dp"
                        app:backgroundTint="@color/second_header" />

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:onClick="goLogin"
                        android:text="@string/already_have_account"
                        android:textColor="@color/second_header"
                        android:textSize="17dp"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>